src/test/ui/higher-rank-trait-bounds/hrtb-higher-ranker-supertraits-transitive.stderr
error[E0277]: the trait bound `for<'ccx> B: Bar<'ccx>` is not satisfied
  --> $DIR/hrtb-higher-ranker-supertraits-transitive.rs:47:26
   |
LL |     want_bar_for_any_ccx(b);
   |     -------------------- ^ the trait `for<'ccx> Bar<'ccx>` is not implemented for `B`
   |     |
   |     required by a bound introduced by this call
   |
note: required by a bound in `want_bar_for_any_ccx`
  --> $DIR/hrtb-higher-ranker-supertraits-transitive.rs:32:15
   |
LL | fn want_bar_for_any_ccx<B>(b: &B)
   |    -------------------- required by a bound in this
LL |     where B : for<'ccx> Bar<'ccx>
   |               ^^^^^^^^^^^^^^^^^^^ required by this bound in `want_bar_for_any_ccx`
help: consider further restricting this bound
   |
LL |     where B : Qux + for<'ccx> Bar<'ccx>
   |                   +++++++++++++++++++++

error: aborting due to previous error

For more information about this error, try `rustc --explain E0277`.
